--- a/doordash.css
+++ b/doordash.css
@@ -369,7 +369,7 @@ footer li:hover , footer a:hover{
 }
 .tail-end , .footer-links{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin: 0;
     align-items: center;
 }
